# JitaTrader

./: Iniciar JitaTrader.bat  README.md  pyproject.toml
database/: schema.sql
math/: MATH-001_ROI_and_Profitability.md  MATH-002_Liquidity.md  MATH-003_Competition.md  MATH-004_Risk.md  MATH-005_ExitTime.md  MATH-006_Confidence.md  MATH-007_Portfolio_Optimization.md
scripts/: diagnose_liquidity.py  import_esi_market_data.py  import_sde_categories_groups.py  jita_analyze.py  run_detection.py  setup_database.py  track_type.py
src/application/use_cases/: __init__.py  detect_opportunities_use_case.py
src/domain/ports/: market_repository.py  type_repository.py
src/domain/services/: __init__.py  competition_engine.py  exit_time_engine.py  liquidity_engine.py  opportunity_engine.py  risk_engine.py  roi_engine.py
src/domain/value_objects/: __init__.py  analysis_result.py  competition.py  exit_time.py  liquidity.py  money.py  opportunity.py  recommendation.py  risk.py  tax_profile.py
src/infrastructure/esi/: esi_client.py  market_history_importer.py  market_orders_importer.py
src/infrastructure/repositories/: esi_live_market_repository.py  in_memory_type_repository.py  sqlite_market_repository.py  sqlite_type_repository.py
src/presentation/streamlit_app/: app.py
src/presentation/streamlit_app/pages/: 02_tracked_items.py
src/shared/: exceptions.py
tests/domain/services/: test_competition_engine.py  test_liquidity_engine.py  test_opportunity_engine.py  test_risk_engine.py  test_roi_engine.py
tests/domain/value_objects/: test_money.py  test_tax_profile.py
(+1 files in other folders)
